# neuroguard-ai

./: .gitignore  .pre-commit-hooks.yaml  README.md  neuroguard.yml  pyproject.toml  requirements.txt  vercel.json
.github/workflows/: neuroguard.yml
demo/: vuln_sample.js  vuln_sample.py
neuroguard/: agent.py  cli.py  integrations.py  prompts.py  thinking_parser.py  ui.py
neuroguard/tools/: js_sast.py  sast.py
site/: index.html
